--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 
 <body>
-  <h2 class="content-head is-center">Contact Us!</h2>
-  <aside>
-       <p>
-           We would <em>love</em> to hear from you! </p>
-           <p>Please use the <b><em>Contact Form</em></b>
-           to send us a message.
-       </p>
-   </aside>
+  <h2 class="content-head is-center">#BLM Emails for Change</h2>
+  <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your message. Thank you for supporting, together we can make change. #BLM</p>
 
 <!-- START HERE -->
    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
@@ -23,31 +17,32 @@
    <!-- Style The Contact Form How Ever You Prefer -->
    <link rel="stylesheet" href="style.css">
 
-  <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
-  action="https://script.google.com/macros/s/AKfycbwMxYDrufp73bKdU8gMvxFDdHRuzcR4IKQUB33B7GqwyfyZS04/exec">
+   <aside>
+    <p>
+        <b>Justice for GEORGE FLOYD</b></p>
+        The following email will be sent to the Minneapolis Police Department.
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="police@minneapolismn.gov"
+  action="https://script.google.com/macros/s/AKfycbwgK_dpxub9J-UmxOtKvHkuncBpPs_tr8Yv4dguxbTSbeTOCkI/exec">
     <!-- change the form action to your script url -->
 
     <div class="form-elements">
       <fieldset class="pure-group">
         <label for="name">Name: </label>
-        <input id="name" name="name" placeholder="What your Mom calls you" />
+        <input id="name" name="name" placeholder="Your name here..." />
       </fieldset>
 
       <fieldset class="pure-group">
         <label for="message">Message: </label>
-        <textarea id="message" name="message" rows="10"
-        placeholder="Tell us what's on your mind..."></textarea>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am emailing today to demand accountability for the racist murder of George Floyd. I demand that charges be pressed against all officers involved in this heinous racist murder, including specifically Derek Chauvin and Tou Thao. They should not be allowed to keep their jobs and should be charged and prosecuted to the fullest extent of the law for manslaughter.&#010;&#010;George Floyd should be alive today if it was not for the gross abuse of power and white supremacy exhibited by the Minneapolis Police Department, all officers involved must face consequences for this murder in order to provide his family with justice and prevent further cops from committing brutal acts of violence against our communities.&#010;&#010;In addition, I demand that we start providing more support towards community efforts and organizations outside of the police forces in order to prevent police brutality and violence in the future.</textarea>
       </fieldset>
 
       <fieldset class="pure-group">
-        <label for="email"><em>Your</em> Email Address:</label>
+        <label for="email">Your Email Address:</label>
         <input id="email" name="email" type="email" value=""
         required placeholder="your.name@email.com"/>
-      </fieldset>
-
-      <fieldset class="pure-group">
-        <label for="color">Favourite Color: </label>
-        <input id="color" name="color" placeholder="green" />
       </fieldset>
 
       <fieldset class="pure-group honeypot-field">
@@ -61,8 +56,267 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2><em>Thanks</em> for contacting us!
-        We will get back to you soon!</h2>
+      <h2>Thank you for supporting George Floyd #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
+    </div>
+  </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+ 
+  <aside>
+    <p>
+        <b>Justice for REGIS KORCHINSKI-PAQUET</b></p>
+        The following email will be sent to Canadian Lawyer and Politican, Arif Virani.</p>
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="Arif.Virani@parl.gc.ca"
+  action="https://script.google.com/macros/s/AKfycbwwHGj3zo_i79rJGfcqRJJNyCCmAWVblhwOoCE8inBy95uY7_4/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name here..." />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am writing to you in regards to the incident that occurred at 100 High Park Avenue on May 27th, 2020. A 29 year-old Black woman, Regis, has died after allegedly falling off her balcony, despite police being present.&#010;&#010;As a concerned citizen, I am very upset and disturbed at the events that took place and the allegations that this caused on the part of the police. I am demanding justice and answers as to the death of Regis Korchinski-Paquet.&#010;&#010;A complete and transparent public and independent investigation needs to take place. Charges need to be brought to all the officers involved, as well as all information and evidence should be made available to the public.</textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email">Your Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
+
+      <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thank you for supporting Regis Korchinski-Paquet #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
+    </div>
+
+  </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+ 
+  <aside>
+    <p>
+        <b>Justice for BREONNA TAYLOR</b></p>
+        The following email will be sent to Lousiville Councilman, David James.
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="david.james@louisvilleky.gov"
+  action="https://script.google.com/macros/s/AKfycbwlJdldHqsMRYkQxyczwGRofBOruL9KIeeJ9YHUC1O7J3Af4cse/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name here..." />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am writing to you from in regards to the invalid police search that took place on March 13th, resulting in the murder of 26 year old emergency room technician Breonna Taylor.&#010;&#010;I am greatly upset with how this situation played out in the weeks prior and in the weeks that followed Breonna Taylor’s murder. I am calling for action to create a full investigation of the intentions of the officers involved, Sgt Johnathon Mattingly, officer Myles Cosgrove, and officer Brett Hankinson. I want to give total justice to Breonna, Breonna’s family, and Breonna’s boyfriend, Kenneth Walker.&#010;&#010;A complete and transparent public and independent investigation needs to take place. Charges need to be brought to all the officers involved, as well as all information and evidence should be made available to the public.</textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email">Your Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
+
+      <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thank you for supporting Breonna Taylor #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
+    </div>
+
+  </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+ 
+  <aside>
+    <p>
+        <b>Justice for TONY MCDADE</b></p>
+        The following email will be sent to Tallahassee Mayor, John Dailey.
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="mayor@talgov.com"
+  action="https://script.google.com/macros/s/AKfycbzKGNZmUOyDKce6YYAqDoKfER5xAVD3TuDyrhUobgp-WvFQ198N/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name here..." />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I'm writing with such a heavy heart to read about the murder of Tony McDade on Holton Street in your city on May 27, 2020.&#010;&#010;First of all, please use Tony's correct name (Tony McDade) and pronouns (he/him) on the official police website and in any communication with the press. To use his birth name and she/her pronouns is a huge sign of disrespect.&#010;&#010;I am very upset and disturbed by the events that took place. We need answers about exactly what happened, and justice for those who were involved.&#010;&#010;A complete and transparent public and independent investigation must take place. We demand the release of all body camera footage, and the arrests of all officers involved. All information and evidence must be made available to the public as soon as possible.</textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email">Your Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
+
+      <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thank you for supporting Tony McDade #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
+    </div>
+
+  </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+ 
+  <aside>
+    <p>
+        <b>Justice for DION JOHNSON</b></p>
+        The following email will be sent to the Arizona Dept. of Public Safety.
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="pio_unit@azdps.gov"
+  action="https://script.google.com/macros/s/AKfycbxdphtni14bbOd4QGpw23djJmZ_01_P_1QD6z5Y75r2BKanI7Q6/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name here..." />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am writing to you about the murder of Dion Johnson, an unarmed and asleep Black man, on Loop 101 at Tatum Boulevard in Phoenix on Monday, May 25, 2020.&#010;&#010;I am horrified and enraged by the events that took place. We require information regarding the tragedy that took place, and we demand justice for Dion Johnson and his family.&#010;&#010;A complete and transparent public and independent investigation must take place. We demand the release of information and the arrests of the Department of Public Safety trooper involved. All information and evidence must be made available to the public as soon as possible.</textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email">Your Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
+
+      <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thank you for supporting Dion Johnson #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
+    </div>
+
+  </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+ 
+  <aside>
+    <p>
+        <b>Justice for JAMES SCURLOCK</b></p>
+        The following email will be sent to the Chair of the Douglas County Board of Commissioners, Clare Duda.
+    </p>
+  </aside>
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="clare.duda@douglascounty-ne.gov"
+  action="https://script.google.com/macros/s/AKfycbzSYzKtHXNlvCNDcDIegoc-MCQYPVxbcRLZsEM02iMSqBVEaCM/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Your name here..." />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;At a peaceful protest in Omaha, NE, a known racist bar owner, Jake Gardner began using racial slurs, and inciting the protesters. When he was pushed by a young protester, James Scurlock, he shot and killed Scurlock. There is a widely-spread video of Scurlock’s murder and many witnesses.&#010;&#010;Senator Megan Hunt, Governor Pete Ricketts, Nebraska Attorney Pete Festerson, and Douglas County Attorney Donald Kleine: please do everything in your power to raise awareness and prosecute Jake Gardner to the fullest extent of the law. We demand justice for James Scurlock. The world is watching. </textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email">Your Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+      </fieldset>
+
+      <fieldset class="pure-group honeypot-field">
+        <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text field; must be empty to submit the form! Otherwise, we assume the user is a spam bot.</label>
+        <input id="honeypot" type="text" name="honeypot" value="" />
+      </fieldset>
+
+      <button class="button-success pure-button button-xlarge">
+        <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thank you for supporting James Scurlock #BLM</h2>
+      <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
   </form>
