--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting George Floyd #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting George Floyd #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
   </form>
@@ -107,7 +107,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting Regis Korchinski-Paquet #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting Regis Korchinski-Paquet #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
@@ -159,7 +159,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting Breonna Taylor #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting Breonna Taylor #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
@@ -211,7 +211,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting Tony McDade #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting Tony McDade #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
@@ -263,7 +263,7 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting Dion Johnson #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting Dion Johnson #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
@@ -315,11 +315,17 @@
 
     <!-- Customise the Thankyou Message People See when they submit the form: -->
     <div class="thankyou_message" style="display:none;">
-      <h2>Thank you for supporting James Scurlock #BLM</h2>
+      <h2 style="color:green;">Thank you for supporting James Scurlock #BLM</h2>
       <p>We hope that you continue to protest and demand change in our society.</p>
     </div>
 
   </form>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" src="form-submission-handler.js"></script>
