--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contact form example">
-  <title>Contact Form Example</title>
+  <title>#BLM Emails for Justice</title>
 </head>
 
 <body>
-  <h2 class="content-head is-center">#BLM Emails for Change</h2>
+  <h2 class="content-head is-center">#BLM Emails for Justice</h2>
   <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your message. Thank you for supporting, together we can make change. #BLM</p>
 
 <!-- START HERE -->
