--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h2 class="content-head is-center">#BLM Emails for Justice</h2>
-  <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your message. Thank you for supporting, together we can make change. #BLM</p>
+  <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your messages. Thank you for supporting, together we can make change. #BLM</p>
 
 <!-- START HERE -->
    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
