--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <aside>
     <p>
         <b>Justice for BREONNA TAYLOR</b></p>
-        The following email will be sent to Lousiville Councilman, David James.
+        The following email will be sent to Louisville Councilman, David James.
     </p>
   </aside>
 
