--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description">
+    <meta name="description" content="Email Templates for BLM">
   <title>#BLM Emails for Justice</title>
 </head>
 
