--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
    <aside>
     <p>
         <b>Justice for GEORGE FLOYD</b></p>
-        The following email will be sent to the Minneapolis Police Department.
+        The following email will be sent to the Minneapolis Police Department Commander of Training, Katie Blackwell.
     </p>
   </aside>
 
-  <form class="gform pure-form pure-form-stacked" method="POST" data-email="police@minneapolismn.gov"
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="katie.blackwell@minneapolisMN.gov "
   action="https://script.google.com/macros/s/AKfycbyS5xwZN-o6uRI4CdQ8BgAGRKy3F-Y-1FLhV3S_PBaFDrgk22c_/exec">
     <!-- change the form action to your script url -->
 
