--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
   </aside>
 
-  <form class="gform pure-form pure-form-stacked" method="POST" data-email="Arif.Virani@parl.gc.ca"
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email=""
   action="https://script.google.com/macros/s/AKfycbwwHGj3zo_i79rJGfcqRJJNyCCmAWVblhwOoCE8inBy95uY7_4/exec">
     <!-- change the form action to your script url -->
 
