--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Email Templates for BLM">
-  <title>#BLM Emails for Justice</title>
+    <meta name="description" content="Email Templates for Justice">
+  <title>#Emails for Justice</title>
 </head>
 
 <body>
-  <h2 class="content-head is-center">#BLM Emails for Justice</h2>
-  <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your messages. Thank you for supporting, together we can make change. #BLM</p>
+  <h2 class="content-head is-center">Emails for Justice</h2>
+  <p>Notice: By hitting send, you are giving consent for petitionemails.blm@gmail.com to email your messages. Thank you for supporting, together we can make change.</p>
 
 <!-- START HERE -->
    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
@@ -37,7 +37,7 @@
 
       <fieldset class="pure-group">
         <label for="message">Message: </label>
-        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am emailing today to demand accountability for the racist murder of George Floyd. I demand that charges be pressed against all officers involved in this heinous racist murder, including specifically Derek Chauvin and Tou Thao. They should not be allowed to keep their jobs and should be charged and prosecuted to the fullest extent of the law for manslaughter.&#010;&#010;George Floyd should be alive today if it was not for the gross abuse of power and white supremacy exhibited by the Minneapolis Police Department, all officers involved must face consequences for this murder in order to provide his family with justice and prevent further cops from committing brutal acts of violence against our communities.&#010;&#010;In addition, I demand that we start providing more support towards community efforts and organizations outside of the police forces in order to prevent police brutality and violence in the future.</textarea>
+        <textarea id="message" name="message" rows="10">Hello, &#010;&#010;I am emailing today to demand accountability for the murder of George Floyd. I demand that charges be pressed against all officers involved in this heinous murder, including specifically Derek Chauvin and Tou Thao. They should not be allowed to keep their jobs and should be charged and prosecuted.&#010;&#010;George Floyd should be alive today if it was not for the gross abuse of power exhibited by the Minneapolis Police Department, all officers involved must face consequences for this murder in order to provide his family with justice and prevent further acts of violence against our communities.&#010;&#010;In addition, I demand that we start providing more support towards community efforts and organizations outside of the police forces in order to prevent police brutality and violence in the future.</textarea>
       </fieldset>
 
       <fieldset class="pure-group">
